welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:2: error: not found: value faireV
override def run() { faireV();		
                     ^