welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() { faireV();		
		avance();
		baisseBrosse();
		leveBrosse();
		avance();
}